src/test/deca/context/invalid/class9.deca
class A {}
class B{
    int a;
}
{
    A ind;
	ind.a;
}
	
